# DataScience

./: .gitignore  README.md
Uebungsblatt1/: TopSellingAlbums.csv  bootstrap_analysis.py  bootstrapping.py  bootstrapping_pavlo.py  diagramme.py  einkommen.txt  ex2graphs.py  exercise_1.py  exercise_2.py  exercise_2Pavlo.py  output.txt  outputPavlo.txt  pyproject.toml  test.ipynb  test.py
Uebungsblatt1/.history/: bootstrap_analysis_20220512235134.py  bootstrap_analysis_20220512235935.py  bootstrap_analysis_20220513000215.py  bootstrap_analysis_20220513000318.py  bootstrap_analysis_20220513000346.py  bootstrap_analysis_20220513000352.py
Uebungsblatt2/: Aufgabe3.txt  gmbh_produkt.txt  konkurrent.txt  permutationtest copy.py  permutationtest.py  permutationtestNick.py  pyproject.toml  scipy_check.py  variante_a.txt  variante_b.txt
Uebungsblatt2/.history/: permutationtest_20220523221503.py  permutationtest_20220523221717.py  permutationtest_20220523221801.py  permutationtest_20220523221807.py  permutationtest_20220523221828.py  permutationtest_20220523221845.py  permutationtest_20220523222138.py  permutationtest_20220523222157.py  permutationtest_20220523230717.py  permutationtest_20220523230830.py  pyproject_20220523222435.toml
Uebungsblatt2/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Uebungsblatt3/: aufgabe2_a.py  aufgabe2_b.py  aufgabe2_c.py  naive_bayes.py  pyproject.toml  text_answers.odt
Uebungsblatt3/.history/: aifgabe2_b_20220609232902.py  aifgabe2_b_20220609232916.py  aifgabe2_b_20220609232943.py  aifgabe2_b_20220609232955.py  aifgabe2_b_20220609233044.py  aifgabe2_b_20220609233132.py  aifgabe2_b_20220609233134.py  aifgabe2_b_20220609233141.py  aifgabe2_b_20220609233208.py  aifgabe2_b_20220609233219.py  aifgabe2_b_20220609233324.py  aifgabe2_b_20220609233418.py  aifgabe2_b_20220609233419.py  aifgabe2_b_20220609233513.py  aifgabe2_b_20220609233520.py  aifgabe2_b_20220609233524.py  aifgabe2_b_20220609233535.py  aifgabe2_b_20220609233557.py  aifgabe2_b_20220609233708.py  aifgabe2_b_20220609233717.py  aifgabe2_b_20220609233728.py  aifgabe2_b_20220609233745.py  aifgabe2_b_20220609233755.py  aifgabe2_b_20220609233939.py  aifgabe2_b_20220609234008.py  aifgabe2_b_20220609234042.py  aifgabe2_b_20220609234125.py  aifgabe2_b_20220609234207.py  aifgabe2_b_20220609234307.py  (+172 more)
Uebungsblatt4/: accuracy.py  neural_net.py  pyproject.toml
Uebungsblatt5/: aufgabe1.py  aufgabe2.py  kmeans.py  pyproject.toml
(+243 files in other folders)
