[tool.poetry]
name = "uebungsblatt1"
version = "0.1.0"
description = ""
authors = ["Kris"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
statistics = "^1.0.3"
pandas = "^1.4.2"
scipy = "^1.8.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
