[tool.poetry]
name = "uebungsblatt2"
version = "0.1.0"
description = ""
authors = ["Kris"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.1"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
