[tool.poetry]
name = "blatt4"
version = "0.1.0"
description = ""
authors = ["Kris"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
