[tool.poetry]
name = "uebungsblatt5"
version = "0.1.0"
description = ""
authors = ["Kristina Pianykh <kristinavrnrus@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.1"
scipy = "^1.8.1"
sympy = "^1.10.1"
flake8 = "^4.0.1"
black = "^22.6.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
sklearn = "^0.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
